# rust-in-action

./: .gitignore  Cargo.md  Errors.md  README.md  Tutorials.md  Wamp-pack.md  Wamp.md  Wasmer.md  wasm-pack.md
000-xyz/: 3d-car.js  inputmode.html  readme.md
000-xyz/Rust-Tutorials/: const  const.rs  data-types  data-types.rs  let  let.rs  print  print.rs  println  println.rs  readme.md  shadowing  shadowing.rs  template.rs
000-xyz/WebAssembly-Tutorials/: readme.md
000-xyz/WebAssembly-Tutorials/webassembly-demo/: app.js  math-sqrt-demo.wasm  math-sqrt-demo.wast  math-sqrt-demo.wat
000-xyz/webassembly/: index.html  math-sqrt-demo.wast  math-sqrt-demo.wat
WebAssembly/: readme.md
src/hello_world/: Cargo.toml  main  main.rs
src/hello_world/src/: main.rs
src/rust-to-wasm-npm/: Cargo.toml  index.html
src/rust-to-wasm-npm/src/: console.log.rs  lib.custom.log.rs  lib.old.rs  lib.rs
src/wasm-pack-demo/: Cargo.toml  README.md  template-git-ignore-bug.md
src/wasmer_demo/: Cargo.toml  js-math-sqrt.wast  js-math-sqrt.wat
src/wasmer_demo/src/: main.rs
test/: app.rs  cowsay.rs
test/first_rust_lib/: Cargo.toml
test/first_rust_lib/src/: lib.rs
test/first_rust_library/: Cargo.toml
test/first_rust_library/src/: lib.rs
test/first_rust_package/: Cargo.toml
test/first_rust_package/src/: cowsay.rs  main.rs
